--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1921,4 +1921,30 @@ p.form-message.success, p.form-message.error {
   animation-iteration-count: infinite;
   animation-direction: alternate;
 }
+.work-slider .slick-dots {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+	margin: 0;
+	padding: 1rem 0;
+	list-style-type: none;
+  flex-wrap: wrap;
+}
+.work-slider .slick-dots li {
+  margin: 3px 0.25rem;
+}
+.work-slider .slick-dots button {
+  display: block;
+  width: 10px;
+  height: 10px;
+  padding: 0;
+  border: none;
+  border-radius: 100%;
+  background-color: #274C77;
+  text-indent: -9999px;
+}
+.work-slider .slick-dots li.slick-active button {
+  background-color: #55acee;
+}
 /*# sourceMappingURL=style.css.map */
