--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,6 +127,12 @@ p {
   height: 100%; }
 
 /*===== All Button Style =====*/
+.header-content-right .main-btn{
+  background: -webkit-linear-gradient(336deg, #274C77 0%, #330867 100%);
+}
+.header-content-right .main-btn:hover{
+  animation: shake 2s infinite;
+}
 .main-btn {
   display: inline-block;
   font-weight: 500;
@@ -157,7 +163,7 @@ p {
   text-transform: uppercase; }
   .main-btn:hover {
     background-color: #fff;
-    color: #274C77;
+    color: white;
     border-color: #274C77; }
   .main-btn.main-btn-2 {
     background-color: transparent;
@@ -715,7 +721,9 @@ p {
   position: relative; }
   .header-content-right .sub-title {
     font-size: 30px;
-    color: #274C77;
+    background: -webkit-linear-gradient(336deg, #274C77 0%, #330867 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
     text-transform: uppercase;
     padding-bottom: 15px; }
     @media (max-width: 767px) {
@@ -751,7 +759,7 @@ p {
     content: '';
     width: 100%;
     height: 20px;
-    background-color: #274C77;
+    background-image: linear-gradient(336deg, #274C77 0%, #330867 100%);
     left: 0;
     bottom: 58px;
     z-index: 11; }
@@ -771,7 +779,7 @@ p {
       content: '';
       width: 100%;
       height: 2px;
-      background-color: #274C77;
+      background-image: linear-gradient(336deg, #274C77 0%, #330867 100%);
       left: -102.5%;
       top: 50%;
       -webkit-transform: translateY(-50%);
@@ -800,8 +808,8 @@ p {
         text-align: center; }
         .header-social .header-social-icon ul li a:hover {
           color: #fff;
-          background-color: #274C77;
-          border-color: #274C77; }
+          background-image: linear-gradient(336deg, #274C77 0%, #330867 100%);
+          border-color: transparent; }
 
 /*===========================
         3.ABOUT css 
@@ -879,14 +887,19 @@ p {
       left: 0;
       height: 5px;
       border-radius: 5px;
-      background-color: #274C77;
+      background-image: linear-gradient(90deg,#ffd33d,#ea4aaa 17%,#b34bff 34%,#01feff 51%,#ffd33d 68%,#ea4aaa 85%,#b34bff);
       -webkit-transition: all 2s ease-out 0s;
       -moz-transition: all 2s ease-out 0s;
       -ms-transition: all 2s ease-out 0s;
       -o-transition: all 2s ease-out 0s;
       transition: all 2s ease-out 0s;
-      width: 0; }
-
+      width: 0;
+      animation: progress-animation 2s linear infinite;
+      background-size: 300% 100% }
+      @keyframes progress-animation {
+        0% { background-position: 100%; }
+        100% { background-position: 0; }
+      }
 /*===========================
         4.SERVICES css 
 ===========================*/
@@ -913,8 +926,8 @@ p {
   @media (max-width: 767px) {
     .single-service {
       padding: 15px; } }
-  .single-service .service-icon{
-    animation: shake 2s infinite;
+  .single-service .service-icon img{
+    max-width: 150px;
   }
   @keyframes shake {
     0% { transform: scale(1.25, 0.75); }
@@ -1020,9 +1033,10 @@ p {
       color: #274C77;
       border-color: #fff; }
       .call-action-content ul li .main-btn.custom:hover {
-        background-color: #274C77;
         color: #fff;
-        border-color: #274C77; }
+        background-color: #274C77;
+        border-color: transparent; 
+        background: -webkit-linear-gradient(336deg, #274C77 0%, #330867 100%);}
     .call-action-content ul li .main-btn.custom-2 {
       color: #fff;
       background-color: transparent;
@@ -1343,7 +1357,9 @@ p {
       padding: 30px 25px; } }
   .contact-box .contact-icon i {
     font-size: 48px;
-    color: #274C77; }
+    background: -webkit-linear-gradient(336deg, #274C77 0%, #330867 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent; }
   .contact-box .contact-content {
     margin-top: 15px; }
     .contact-box .contact-content .contact-title {
@@ -1942,6 +1958,86 @@ p.form-message.success, p.form-message.error {
   text-indent: -9999px;
 }
 .work-slider .slick-dots li.slick-active button {
-  background-color: #55acee;
+  background-color: #330867;
 }
-/*# sourceMappingURL=style.css.map */
+.illu-char{
+  width: calc(100px + (320 - 100) * (100vw - 320px) / (1920 - 320));
+  position: absolute;
+  right: 0px;
+  top: 10px;
+  max-width: 320px;
+}
+.azure-bg .section-title .title{
+  color:white;
+}
+.gradient-title,.text-color:hover{
+  background: -webkit-linear-gradient(336deg, #274C77 0%, #330867 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.illu-bell{
+  width: calc(100px + (320 - 100) * (100vw - 320px) / (1920 - 320));
+  position: absolute;
+  left: 0px;
+  top: 10px;
+  right:auto;
+  bottom:auto;
+  max-width: 320px;
+}
+.illu-speaker{
+  width: calc(100px + (320 - 100) * (100vw - 320px) / (1920 - 320));
+  position: absolute;
+  right: 0px;
+  top: 50%;
+  transform: translateY(-50%) !important;
+  max-width: 320px;
+}
+.illu-chat{
+  width: calc(100px + (320 - 100) * (100vw - 320px) / (1920 - 320));
+  position: absolute;
+  left: 0px;
+  bottom: 0%;
+  max-width: 320px;
+}
+.contact-svg{
+  background-image: url("../images/illustration/illu-contact.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  padding-bottom: 300px;
+  margin-top:20px;
+}
+.illu-char-1{
+  width: calc(100px + (320 - 100) * (100vw - 320px) / (1920 - 320));
+  position: absolute;
+  right: 0px;
+  bottom: 10px;
+  max-width: 320px;
+}
+.illu-chart{
+  width: calc(100px + (320 - 100) * (100vw - 320px) / (1920 - 320));
+  position: absolute;
+  left: 0px;
+  top: 10px;
+  max-width: 320px;
+}
+.illu-chart-1{
+  width: calc(100px + (320 - 100) * (100vw - 320px) / (1920 - 320));
+  position: absolute;
+  right: 0px;
+  top: 10px;
+  max-width: 320px;
+}
+.illu-chart-2{
+  width: calc(100px + (320 - 100) * (100vw - 320px) / (1920 - 320));
+  position: absolute;
+  left: 0px;
+  bottom: 10px;
+  max-width: 320px;
+}
+.illu-char img,.illu-bell img,.illu-speaker img,.illu-chat img,.illu-char-1 img,.illu-chart img,.illu-chart-1 img,.illu-chart-2 img{
+  animation-duration: 2s;
+  animation-name: changewidth;
+  animation-iteration-count: infinite;
+  animation-direction: alternate-reverse;
+}
