--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -15,6 +15,9 @@
 .mt-25 {
 	margin-top: 25px;
 }
+.mt-27 {
+	margin-top: 27px;
+}
 .mt-30 {
 	margin-top: 30px;
 }
@@ -28,7 +31,7 @@
 	margin-top: 45px;
 }
 .mt-50 {
-	margin-top: 50px;
+	margin-top: calc(25px + (50 - 25) * (100vw - 320px) / (1920 - 320));
 }
 .mt-55 {
 	margin-top: 55px;
